--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "prepare": "husky"
+    "prepare": "husky",
+    "generate": "prisma generate"
   },
   "dependencies": {
     "@fastify/static": "^7.0.4",
@@ -36,12 +37,14 @@
     "@nestjs/platform-fastify": "^10.3.8",
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/throttler": "^5.1.2",
+    "@prisma/client": "^5.14.0",
     "@willsoto/nestjs-prometheus": "^6.0.0",
     "cache-manager": "^5.5.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "fastify": "^4.27.0",
     "handlebars": "^4.7.8",
+    "nestjs-prisma": "^0.23.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "swagger-stats": "^0.99.7",
@@ -66,13 +69,15 @@
     "husky": "^9.0.11",
     "jest": "^29.5.0",
     "lint-staged": "^15.2.2",
+    "prisma": "^5.14.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "wrangler": "^3.56.0"
   },
   "jest": {
     "moduleFileExtensions": [
