feat(enum): add coop enums

--- a/biome.json
+++ b/biome.json
@@ -29,7 +29,7 @@
       "jsxQuoteStyle": "single",
       "quoteProperties": "asNeeded",
       "semicolons": "asNeeded",
-      "trailingComma": "none"
+      "trailingComma": "all"
     }
   },
   "formatter": {
