--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "paths": {
       "@/*": ["./src/*"]
     },
+    "strictPropertyInitialization": false,
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "strict": true,
